tests/snapshots/run_wpt_conformance__coreml_prelu_float16_broadcast_5D_x_1D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float16 broadcast 5D x 1D slope, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Invalid 'alpha' shape: dimension 0 should be either 1 or equal to the size of the number of channels (the size of dimension 1) of input x

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f16[2, 2, 1, 2, 3];
  }

  consts {
    operand_1: f16[3] @bytes([19, 69, 177, 55, 23, 199]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
