tests/snapshots/run_wpt_conformance__coreml_prelu_float16_broadcast_5D_x_5D_slope.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float16 broadcast 5D x 5D slope, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { [?]>, [?]>, tensor<fp16, tensor<fp32 }; got tensor<fp16, [1, 2, 1, 1, 1]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f16[2, 2, 1, 2, 3];
  }

  consts {
    operand_1: f16[1, 2, 1, 1, 1] @bytes([3, 69, 3, 69]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
