tests/snapshots/run_wpt_conformance__coreml_prelu_float32_0D_scalar.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 0D scalar, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'alpha' has incorrect type for operator 'ios17.prelu'. Expected { [?]>, [?]>, tensor<fp16, tensor<fp32 }; got fp32.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    preluInput: f32[];
  }

  consts {
    operand_1: f32[] @bytes([42, 101, 143, 63]);
  }

  nodes {
    [preluOutput] = prelu(preluInput, operand_1, label="");
  }

  outputs { preluOutput; }
}
