tests/snapshots/run_wpt_conformance__coreml_prelu_float32_1D_constant_tensors.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
prelu.https.any.js prelu float32 1D constant tensors, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type prelu: Param 'x' has incorrect type for operator 'ios17.prelu'. Expected { ...]>, ...]>, ?, ?, [?, [?, tensor<fp16, tensor<fp32 }; got tensor<fp32, [24]>.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f32[24] @bytes([146, 37, 35, 192, 121, 111, 153, 192, 45, 158, 6, 65, 216, 121, 195, 64, 110, 224, 7, 193, 23, 30, 84, 64, 168, 152, 149, 63, 71, 42, 17, 190, 110, 222, 214, 192, 143, 50, 185, 64, 51, 92, 112, 192, 195, 190, 156, 192, 101, 139, 234, 64, 26, 18, 125, 192, 76, 39, 226, 64, 41, 9, 23, 65, 57, 185, 35, 192, 150, 138, 10, 193, 231, 153, 7, 65, 71, 165, 145, 64, 51, 73, 20, 193, 31, 60, 134, 190, 242, 182, 169, 63, 206, 98, 237, 192]);
    operand_1: f32[24] @bytes([79, 125, 21, 65, 43, 101, 143, 62, 41, 191, 147, 192, 42, 101, 143, 63, 251, 123, 183, 191, 9, 22, 74, 192, 78, 71, 201, 192, 96, 88, 160, 192, 62, 197, 220, 192, 105, 164, 100, 64, 59, 149, 219, 64, 118, 19, 251, 191, 155, 169, 146, 64, 183, 132, 42, 64, 88, 22, 19, 65, 13, 224, 24, 193, 204, 41, 176, 192, 154, 34, 25, 192, 156, 65, 101, 64, 53, 162, 20, 192, 243, 166, 253, 191, 13, 253, 132, 64, 189, 86, 230, 191, 205, 187, 20, 65]);
  }

  nodes {
    [preluOutput] = prelu(operand_0, operand_1, label="");
  }

  outputs { preluOutput; }
}
